# ChangeLog for dev-db/postgresql
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql/Attic/ChangeLog,v 1.53 2003/02/28 21:10:19 nakano Exp $

*postgresql-7.3.2 (01 Mar 2003)
   01 Mar 2003: Masatomo Nakano <nakano@gentoo.org> postgresql-7.3.2.ebuild:

  version bump. masked for test.

*postgresql-7.3.1 (31 Dec 2002)
  03 Feb 2003: Will Woods <wwoods@gentoo.org> postgresql-7.3.1.ebuild:
  added ~alpha keyword

  04 Dec 2002: Michael Cummings <mcummings@gentoo.org>
  postgresql-7.3.ebuild: 

  Added sparc64 keyword - installs and runs just fine

  07 Feb 2003; Ryan Phillips <rphillisp@gentoo.org> postgresql-7.3.1.ebuild :
  Added egenix-mx-base dep for python support

  02 Feb 2003; Pieter Van den Abeele <pvdabeel@gentoo.org> postgresql-7.3.1.ebuild :
  Changed java dep back to virtual/jdk because sun-jdk is x86-only. 
  Uncomment the x86 ? keyword line if you want a sun-jdk dependency or emerge sun-jdk manually

  31 Jan 2003; Ryan Phillips <rphillips@gentoo.org> postgresql-7.3.1.ebuild :
  Changed java dep to be sun-jdk for compatibility


  31 Dec 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.3.1.ebuild :
  Version bump.. Masked for testing.

*postgresql-7.3 (1 Dec 2002)

  21 Dec 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.3.ebuild:
  Added an addwrite to the perl script

  03 Dec 2002: Preston A. Elder <prez@gentoo.org> files/7.3/postgresql:
  Forgot the init script, added now.

  01 Dec 2002: Preston A. Elder <prez@gentoo.org> postgresql-7.3.ebuild:
  Added new version, also stopped forcing Java 1.3, 1.4 works fine now.

*postgresql-7.2.3-r1 (27 Oct 2002)

  26 Nov 2002; Mark Guertin <gerk@gentoo.org> postgresql-7.2.3-r1.ebuild:
  forced CFLAGS="-pipe -fsigned-char", any more aggressive optimizations
  cause failures on ppc

  26 Nov 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.2.3-r1.ebuild :