@@ -1,9 +1,12 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql/Attic/ChangeLog,v 1.53 2003/02/28 21:10:19 nakano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql/Attic/ChangeLog,v 1.54 2003/03/17 03:51:55 nakano Exp $
 
 *postgresql-7.3.2 (01 Mar 2003)
-   01 Mar 2003: Masatomo Nakano <nakano@gentoo.org> postgresql-7.3.2.ebuild:
+  17 Mar 2003: Masatomo Nakano <nakano@gentoo.org> postgresql-7.3.2.ebuild:
+  Fixed bug #14953
+
+  01 Mar 2003: Masatomo Nakano <nakano@gentoo.org> postgresql-7.3.2.ebuild:
 
   version bump. masked for test.
 
@@ -31,6 +34,8 @@
   Version bump.. Masked for testing.
 
 *postgresql-7.3 (1 Dec 2002)
+  17 Mar 2003: Masatomo Nakano <nakano@gentoo.org> postgresql-7.3.ebuild:
+  Fixed bug #14953
 
   21 Dec 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.3.ebuild:
   Added an addwrite to the perl script
